# axum-jwt

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230428041658_init.up.sql
src/: app_state.rs  config.rs  main.rs  models.rs  routes.rs
src/models/: dto.rs  error.rs  token_claim.rs  user.rs
src/models/dto/: login_info.rs  message.rs  mod.rs  profile.rs  register_info.rs
src/routes/: health.rs  login.rs  product.rs  profile.rs  register.rs
src/routes/middlewares/: auth_guard.rs  mod.rs
